--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -421,11 +421,11 @@ $(function() {
                     element: "#group-score",
                     placement: "top",
                     {% if treatment_type == "COMMUNITY" %}
-                    content: "This is your overall score for the day. Your score is the average number of green points each member of every group has earned, starting at midnight each day."
                     title: "Overall Score",
+                    content: "This is your overall score for the day. Your score is the average number of green points each member of every group has earned, starting at midnight each day."
                     {% else %}
-                    content: "This is your overall score for the day. Your score is the average number of points each member of your group has earned, starting at midnight each day."
                     title: "Group Score",
+                    content: "This is your group score for the day. Your score is the average number of points each member of your group has earned, starting at midnight each day."
                     {% endif %}
                 },
                 {
