--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -49,8 +49,8 @@
                     <span data-bind='if: linearPublicGood'>
                         You will earn <b class='lighterprints-green'><i class='fa fa-usd'></i>0.02</b> for each point in
                         {% if treatment_type == "COMMUNITY" %}
-                        your Overall Score. Your Overall Score is the average number of green points earned by all
-                        members of your group and <b>the members of all the other groups</b>
+                        your Overall Score. Your Overall Score is the average number of green points earned by <b>all
+                        members of your group and the members of all the other groups</b>.
                         {% else %}
                         your Group Score.
                         {% endif %}
@@ -61,7 +61,7 @@
                     </span>
                 </p>
                 <p>
-                    <i class='fa fa-star text-gold'></i> Some challenges are unlocked all day, and others are only unlocked at specific times.
+                    <i class='fa fa-star text-gold'></i> Some challenges are available all day, while others are only available at specific times.
                 </p>
                 <p>
                 <strong><i class='fa fa-warning text-error'></i> Your score resets at midnight every day.</strong>
@@ -148,11 +148,11 @@
                         {% if treatment_type == "COMMUNITY" %}
                         your Overall Score. Your Overall Score is the average number of green points earned by all
                         members of your group and all the other groups.
+                        For example, if your overall score is <b>150</b> by the end of today you would have earned
+                        <b><i class='fa fa-usd'></i>3.00</b>.
                         {% else %}
                         your Group Score.
                         {% endif %}
-                        For example, if your overall score is <b>150</b> by the end of today you would have earned
-                        <b><i class='fa fa-usd'></i>3.00</b>.
                     </span>
                     <span data-bind='ifnot: linearPublicGood'>In order to maximize your chances at
                         winning a prize, your group must earn enough points so that the <strong>average number of points</strong> per participant is greater than
@@ -168,7 +168,7 @@
         <div class='tab-pane' id='help'>
             <h1 class='header'><i class='fa fa-question-circle'></i> Instructions</h1>
             <p>
-            You have been randomly placed in a group of <strong>{{ participant_group_relationship.group.size }} participants</strong>.
+            You have been randomly placed in a group of <strong>{{ group_size }} participants</strong>.
             In this experiment you can perform virtual actions that represent green alternatives to some common daily
             activities. Some of these activities are available all day, and others are only available at
             specific times. You can view a list of all activities on the <a href='#challenges' data-bind='click: activateChallengesTab'>Challenges tab</a>.
