replace query with group_size

--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -32,7 +32,7 @@
                 <button type="button" class="close" data-dismiss="alert"><i class='fa fa-times-circle'></i></button>
                 <h2 class='welcome-header lighterprints-dark-gray'>Welcome to Lighter Footprints, <i class='lighterprints-blue'><span data-bind='text: groupName'></span>!</i></h2>
                 <p>
-                    You have been randomly placed in a group of {{ participant_group_relationship.group.size }}
+                    You have been randomly placed in a group of {{ group_size }}
                     participants. In this experiment you can perform virtual actions that represent green alternatives
                     to some common daily activities.
                 </p>
