update homepage with subject pool information

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -18,6 +18,31 @@
             instrumental for increasing our understanding of how people organize themselves in cooperative
             arrangements.
         </div>
+        <h2>Participate in paid ASU research</h2>
+        <p>
+        If you are at least 18 years old and an undergraduate student currently enrolled at ASU you can 
+        <a href='https://vcweb.asu.edu/cas/login'>sign up</a> to the participant database that we use for randomly
+        selecting participants.
+        </p>
+        <p>
+        Typical experiments involve making decisions on a computer or on paper or answering survey questions. Experiments take about an hour to complete
+        and may be conducted online or at the <a href='http://csid.asu.edu/ostrom-lab/elinor-ostrom-multi-method-lab'>Elinor
+            Ostrom Multi-Methods Laboratory</a> in <a href='https://maps.asu.edu/?id=120&mrkIid=62880'>Cowden Hall, Room
+            124</a>. Your participation in these experiments is entirely voluntary.  For participating in these studies, you
+        will typically receive $5 for showing up, and an additional amount which can vary between $5 to $40 depending on
+        your decisions during the experiment. 
+        </p>
+        <p>
+        You can sign up by visiting <a href='https://vcweb.asu.edu/cas/login'>https://vcweb.asu.edu/cas/login</a>, signing
+        in with your ASURITE ID, and then filling out a brief questionnaire. When experiment sessions are available,
+        randomly selected groups of individuals in our participant database will receive email invitations informing them of
+        the upcoming sessions and with additional instructions on how to sign up and participate in a specific experiment
+        session. 
+        </p>
+        <p>
+        If you have any other questions, please see our <a href='https://vcweb.asu.edu/ostromlab/faq'>FAQ</a> or feel free
+        to <a href='/contact'>contact us</a>. Thanks for your interest!
+        </p>
         <h2>Current development</h2>
         <div>
             We test our software against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
